@@ -1,6 +1,6 @@
 /* $Id$ */
 /*-
- * Copyright (c) 2004 os-cillation e.K.
+ * Copyright (c) 2004-2005 os-cillation e.K.
  *
  * Written by Benedikt Meurer <benny@xfce.org>.
  *
@@ -298,6 +298,11 @@ terminal_preferences_dialog_init (TerminalPreferencesDialog *dialog)
 
   button = gtk_check_button_new_with_mnemonic (_("_Run command as login shell"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "command-login-shell", G_OBJECT (button), "active");
+  gtk_tooltips_set_tip (dialog->tooltips, button,
+                        _("Select this option to force Terminal to run your shell as a login shell "
+                          "when you open new terminals. See the documentation of your shell for "
+                          "details about differences between running it as interactive shell and "
+                          "running it as login shell."), NULL);
   gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, TRUE, 0);
   gtk_widget_show (button);
 
@@ -327,6 +332,10 @@ terminal_preferences_dialog_init (TerminalPreferencesDialog *dialog)
 
   button = gtk_check_button_new_with_mnemonic (_("Sc_roll on output"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "scrolling-on-output", G_OBJECT (button), "active");
+  gtk_tooltips_set_tip (dialog->tooltips, button,
+                        _("This option controls whether the terminal will scroll "
+                          "down automatically whenever new output is generated by "
+                          "the commands running inside the terminal."), NULL);
   gtk_table_attach (GTK_TABLE (table), button, 0, 2, 0, 1,
                     GTK_FILL | GTK_EXPAND, GTK_FILL, 0, 0);
   gtk_widget_show (button);
@@ -430,11 +439,19 @@ terminal_preferences_dialog_init (TerminalPreferencesDialog *dialog)
 
   button = gtk_check_button_new_with_mnemonic (_("Enable anti-aliasing for the terminal font"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "font-anti-alias", G_OBJECT (button), "active");
+  gtk_tooltips_set_tip (dialog->tooltips, button,
+                        _("Enable this option if you want Terminal to use anti-aliasing when "
+                          "rendering text in terminal windows. Disabling this option can "
+                          "impressively speed up terminal rendering performance and reduce "
+                          "the overall system load on slow systems."), NULL);
   gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, TRUE, 0);
   gtk_widget_show (button);
 
   button = gtk_check_button_new_with_mnemonic (_("Allow bold text"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "font-allow-bold", G_OBJECT (button), "active");
+  gtk_tooltips_set_tip (dialog->tooltips, button,
+                        _("Enable this option to allow applications running inside the "
+                          "terminal windows to use bold text."), NULL);
   gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, TRUE, 0);
   gtk_widget_show (button);
 
@@ -562,7 +579,7 @@ terminal_preferences_dialog_init (TerminalPreferencesDialog *dialog)
   button = gtk_check_button_new_with_mnemonic (_("Display _menubar in new windows"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "misc-menubar-default", G_OBJECT (button), "active");
   gtk_tooltips_set_tip (dialog->tooltips, button,
-                        _("Enable to show the menubar in newly "
+                        _("Enable this option to show the menubar in newly "
                           "created terminal windows."), NULL);
   gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 0);
   gtk_widget_show (button);
@@ -570,7 +587,7 @@ terminal_preferences_dialog_init (TerminalPreferencesDialog *dialog)
   button = gtk_check_button_new_with_mnemonic (_("Display _toolbars in new windows"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "misc-toolbars-default", G_OBJECT (button), "active");
   gtk_tooltips_set_tip (dialog->tooltips, button,
-                        _("Enable to show the toolbars in newly "
+                        _("Enable this option to show the toolbars in newly "
                           "created terminal windows."), NULL);
   gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 0);
   gtk_widget_show (button);
@@ -578,7 +595,7 @@ terminal_preferences_dialog_init (TerminalPreferencesDialog *dialog)
   button = gtk_check_button_new_with_mnemonic (_("Display _borders around new windows"));
   exo_mutual_binding_new (G_OBJECT (dialog->preferences), "misc-borders-default", G_OBJECT (button), "active");
   gtk_tooltips_set_tip (dialog->tooltips, button,
-                        _("Enable to show window decorations around newly "
+                        _("Enable this option to show window decorations around newly "
                           "created terminal windows."), NULL);
   gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 0);
   gtk_widget_show (button);
