@@ -1,5 +1,10 @@
 2005-01-31	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/terminal-preferences-dialog.c: Added more tooltips.
+	* po/Terminal.pot, po/de.po: Updated the german translations.
+
+2005-01-31	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/Makefile.am, terminal/HACKING, po/POTFILES.in: Added rules
 	  to properly auto-generate the built files. These autogeneration rules
 	  are only available if --enable-maintainer-mode is specified for 
